c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/sub_void_pointer.c
// no pointer arithmetic with pointers to incomplete type
// (GCC/Clang allow this as an extension)

int main(void) {
  int y;
  void *x = &y;
  void *null = 0;
  return x - null;
}